# pg-gan

./: .gitignore  MANIFEST.in  README.md  __init__.py  discriminator.py  generator.py  param_set.py  pg_gan.py  pyproject.toml  real_data_random.py  setup.py  simulation.py  ss_helpers.py  summary_stats.py  util.py
pg_gan/: discriminator.py  generator.py  global_vars.py  param_set.py  pg_gan.py  real_data_random.py  simulation.py  ss_helpers.py  summary_stats.py  train.py  util.py
pg_gan/sps/: HomSap.py
prep_data/: CHB_h103_filelist.txt  YRI_h108_filelist.txt  prep_vcf.sh
